fixed the references

--- a/Web.config
+++ b/Web.config
@@ -5,21 +5,30 @@
   -->
 <configuration>
   <connectionStrings>
-    
-    <add name="ConnectionString" connectionString="Data Source=|DataDirectory|\Database.sdf" providerName="System.Data.SqlServerCe.4.0"/>
+	  <add name="ConnectionString" connectionString="Server=tcp:hcprod.database.windows.net,1433;Initial Catalog=appdb;Persist Security Info=False;User ID=amanasr;Password=Voidmain@7907;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+	<!--  <add name="ConnectionString" connectionString="Server=172.173.155.238;Database=appdb;User Id=amanasr;Password=Voidmain@7907"/> -->
+    <!--<add name="ConnectionString" connectionString="Data Source=|DataDirectory|\Database.sdf" providerName="System.Data.SqlServerCe.4.0"/> -->
   </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-   
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.8">
       <assemblies>
-        <add assembly="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
+		 <!-- <add assembly="System.Data.SqlServerCe_unofficial, Version=4.0.8482.1, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>  -->
+        <!--<add assembly="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/> -->
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5"/>
-   <sessionState mode ="InProc" timeout ="1"></sessionState>
+    <sessionState mode="InProc" timeout="30"/>
   </system.web>
   <appSettings>
     <add key="validationSettings:UnobtrusiveValidationMode" value="none"/>
